# src/application/identity/commands/resend-invitation.ts
@@ -1,0 +1,6 @@
+export const RESEND_INVITATION_TYPE = "identity.invitation.resend";
+
+export interface ResendInvitationCommand {
+  type: typeof RESEND_INVITATION_TYPE;
+  invitationId: string;
+}
